# simTIM

./: .gitignore  .pre-commit-config.yaml  BUGFIX_REPEATED_ACTIONS.md  CHANGELOG.md  LICENSE  Makefile  README.md  ROADMAP.md  SHOWCASE_RESULTS.md  debug_attacker.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  run_tests_new.py  showcase_demo.py  test_all_detection_engines.py  test_event_ordering.py  test_gui_enhanced.py  test_gui_simulation.py  test_kill_chain.py  test_priority_removal.py  test_repeated_action_fix.py  test_tim_compliance.py
.github/: dependabot.yml
.github/workflows/: ci.yml
actions/: action.py  action_attack.py  action_defense.py  action_loader.py  action_manager.py  action_registry.py  action_utils.py  json_conditions.py
actors/: actor.py  attacker.py  defender.py
docs/: DevDocs.md  simTIM_old.tex  topics.md
docs/Paper/: Camery_Ready_TODO.md  Peer_Review.md  Peer_Review_Bullet.md  Peer_Review_TODO.md  references.bib  simTIM_ARES26.aux  simTIM_ARES26.bbl  simTIM_ARES26.blg  simTIM_ARES26.fdb_latexmk  simTIM_ARES26.fls  simTIM_ARES26.tex
docs/Sources/: Data_Sources.md  temporal.txt
docs/simTIM_old/: simTIM_old.aux  simTIM_old.fdb_latexmk  simTIM_old.fls
gui/: app.py  tempCodeRunnerFile.py
networks/: network1.json  network_creator.py  network_loader.py  network_visualizer.py  star_network.json
sample_tim_visualization/: statistical_summary_report.txt
simulator/: economic_model.py  graph.py  network.py  simulator.py
src/: config.py  logging_config.py
src/actions/: __init__.py  action.py  action_factory.py  action_loader.py  action_manager.py  action_registry.py  action_utils.py  action_validator.py  json_conditions.py  link_actions.py  version.py
src/actors/: __init__.py  actor.py  attacker.py  defender.py  factory.py
src/core/: __init__.py  access_levels.py  access_utils.py  action_index.py  detection.py  economic_model.py  events.py  exceptions.py  graph.py  network.py  simulator.py  (+3 more)
tests/: conftest.py  test_access_levels.py  test_access_utils.py  test_action.py  test_action_loading.py  test_action_validator.py  test_actors.py  test_detection.py  test_economic_model.py  test_event_bus.py  test_exceptions.py  test_json_conditions.py  test_network.py  test_network_validation.py  test_simulation.py  test_simulator_extended.py  test_time_utils.py  test_version.py
tim_demo_analysis/: statistical_summary_report.txt
visualization/: README.md  plot_results.py
(+84 files in other folders)
