[project]
name = "simtim"
version = "0.6.1"
description = "Simulation based on the paper 'Time is money: A temporal model of cybersecurity' by Zoltán Ádám Mann."
readme = "README.md"
license = "Apache 2.0"
requires-python = ">=3.10"

authors = [
    {name = "Noah Niclas Behrisch"},
    {name = "Zoltán Ádám Mann"}
]

dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.15.10",
    "mypy>=1.8.0",
    "pre-commit>=4.5.1",
]
security = [
    "pip-audit>=2.7.0",
    "bandit>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/noahbehrisch/simTIM"
Repository = "https://github.com/noahbehrisch/simTIM.git"
Issues = "https://github.com/noahbehrisch/simTIM/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/gui/*",
    "src/visualization/*",
    "src/networks/network_creator/*",
    "src/networks/network_visualizer.py",
    "src/logging_config.py",
    "src/utils/results_printer.py",
    "src/utils/mitre.py",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 50

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = ["E501"]  # line too long - handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false  #  Too many for now
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/", "venv/"]
explicit_package_bases = true
mypy_path = "."
disable_error_code = ["annotation-unchecked"]
# Gradually enable stricter checks:
# check_untyped_defs = true
# disallow_untyped_defs = true
